[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games"
authors = ["vitallcore <vitaslipknot@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/vitallcore/python-project-49.git"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[tool.poetry.classifiers]
Development Status :: 5 - Stable
Intended Audience :: Developers
Topic :: Games/Entertainment
Programming Language :: Python :: 3.12
Natural Language :: English
Framework :: Flake8
License :: OSI Approved :: NASA Open Source Agreement v1.3 (NASA-1.3)
Operating System :: Unix

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
